# ACE-Lite

./: .gitignore  README.md  fix.cjs  generate_icons_from_ace.py  index.html  package-lock.json  package.json
scripts/: package-release.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  elevation.rs  lib.rs  main.rs  mainfest.xml  policy_config.rs  privilege.rs  process_control.rs  registry_policy.rs  report.rs  system_probe.rs  tray.rs  types.rs
src/components/: ActiveActionsCard.tsx  AppHeader.tsx  LogPanel.tsx  MetricChart.tsx  PassiveActionsCard.tsx  PerformancePanel.tsx  RestrictionStatusCard.tsx  SystemInfoCard.tsx  WindowTitleBar.tsx
src/services/: processControl.ts  report.ts
src/theme/: appTheme.ts
src/types/: app.ts
src/utils/: storage.ts
